# SaddleGen

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
examples/LiC/: evaluate.py  recluster.py  replot.py  test_set.traj  train.py  train_set.traj  visualize.py  visualize_mode1.py  visualize_mode1_all.py
examples/LiC/runs/icecream_winner/: config.json  history.json
examples/LiC/runs/mode1_v0/: config.json  history.json
examples/LiC/runs/mode1_v1/: config.json  history.json
examples/LiC/runs/mode1_v2/: config.json  history.json
examples/LiC/runs/mode1_v3/: config.json  history.json
examples/LiC/runs/mode1_v4/: config.json  dataset_stats.json
examples/LiC/runs/mode1_v5/: config.json
examples/LiC/runs/mode1_v6/: config.json
examples/LiC_simpler/: one_saddle.traj  train.py  visualize.py  visualize_mode1.py
examples/LiC_simpler/runs/baseline_gaussian_drifts/: config.json  history.json
examples/LiC_simpler/runs/icecream_winner/: config.json  history.json  traj_sweep.csv
examples/LiC_simpler/runs/mode1_v0/: config.json  dataset_stats.json  (+2 more)
examples/MaterialsSaddles/: sample_and_distance_eval.py
saddlegen/data/: __init__.py  convert_to_db.py  convert_trajectories_to_db.py  core.py  db_dataset.py  materials_saddles_dataset.py  traj_dataset.py  trajectory_dataset.py  transforms.py
saddlegen/flow/: __init__.py  matching.py  sampler.py
saddlegen/models/: __init__.py  eigenmode_head.py  global_attn.py  time_film.py  time_filmed_backbone.py  velocity_head.py
saddlegen/utils/: __init__.py  backbone.py  checkpointing.py  eval.py  forces.py  training.py
(+23 files in other folders)
